tests/miniJava/neg/000218_mutation.MiniJava
class java { public static void class java { } ( String [ ] java ) { { } } }
